<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">光纤长度精密测量软件</string>
    <string name="txt_btn_setMac">设置蓝牙MAC地址</string>
    <string name="txt_setHint">请选择工作模式</string>
    <string name="txt_btn_scan">扫描设备</string>
    <string name="txt_btn_connect_BT">开始</string>
    <string name="txt_btn_about">关于</string>
    <string name="txt_btn_measure">开始测量</string>
    <string name="txt_btn_paramset">参数设置</string>
    <string name="txt_about">本软件用于</string>
    <string name="txt_result">Result:</string>
    <!--<string name="txt_cnt">Cnt:</string>-->
    <string name="txt_cnt">波数：</string>
    <!--<string name="txt_loss">Loss:</string>-->
    <string name="txt_loss">差损：</string>
    <string name="txt_dB">dB</string>
    <string name="txt_fst">FSR:</string>
    <string name="txt_mhz">MHz</string>
    <!--<string name="txt_dl">DL:</string>-->
    <string name="txt_dl">臂长差：</string>
    <string name="txt_l">长度：</string>
    <string name="txt_metre">m</string>
    <!--<string name="txt_n">n:</string>-->
    <string name="txt_n">折射率：</string>
    <string name="txt_measure_range">测量范围：</string>
    <!--<string name="txt_rdio_long">Long (25m-300m)</string>-->
    <!-- <string name="txt_rdio_long">长 (25m-300m)</string> -->
    <!--<string name="txt_rdio_mid">Mid (2.5m-25m)</string>-->
    <!-- <string name="txt_rdio_mid">中 (2.5m-25m)</string> -->
    <!--<string name="txt_rdio_short">Short (10cm-2.5m)</string>-->
    <!--<string name="txt_rdio_short">Short (10cm-2.5m)</string>-->
    <!-- <string name="txt_rdio_short">短 (10cm-2.5m)</string> -->

    <string name="txt_rdio_long">Long (&#062;50m)</string>
    <string name="txt_rdio_mid1">Mid1 (5~50m)</string>
    <string name="txt_rdio_mid2">Mid2 (0.5~6m)</string>
    <string name="txt_rdio_short">Short (&#060;0.5m)</string>


    <string name="txt_rdio_bccMode">干涉型臂长差测量模式</string>
    <string name="txt_rdio_gxcMode">光纤链路长测量模式</string>
    <string name="txt_btn_save">保存数据</string>
    <string name="txt_btn_read">读取数据</string>
    <string name="txt_btn_exit">退出</string>
    <string name="txt_title_bbc">干涉型臂长差测量软件</string>
    <string name="txt_title_gxc">光纤链路长度测量软件</string>
    <string name="txt_btn_subN">减小</string>
    <string name="txt_btn_addN">增加</string>
    <string name="txt_operator">操作人：</string>
    <string name="txt_date">测量时间：</string>
    <string name="txt_product_type">产品型号：</string>
    <string name="txt_product_id">产品编号：</string>
    <string name="txt_produce_date">生产日期：</string>
    <string name="txt_measure_date">测量时间：</string>
    <string name="txt_comment">备注：</string>
    <string name="txt_edt_hint">请输入信息</string>

    <string name="txt_splashContent">光纤长度精密测量仪器</string>

    <!--<string-array name="arr_spn_bg">-->
        <!--<item>干涉型臂长差测量软件</item>-->
        <!--<item>光线链路长度测量软件</item>-->
    <!--</string-array>-->
</resources>
