<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/main">
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/btn_setMac"-->
        <!--android:text="@string/txt_btn_setMac"-->
    <!--/>-->

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_scan"
            android:id="@+id/btn_scan"
    />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_setHint"
            android:padding="20dip"
            android:gravity="center_horizontal"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdiog_modeSet">
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_rdio_bccMode"
                android:id="@+id/rdio_bccMode"
                android:checked="false"/>

        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_rdio_gxcMode"
                android:id="@+id/rdio_gxcMode"
                android:checked="false"/>
    </RadioGroup>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_connect"
                android:text="@string/txt_btn_connect_BT"
                android:visibility="gone"
        />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_about"
                android:text="@string/txt_btn_about"
        />

        <!--<Button android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/btn_localMAC"-->
                <!--android:text="本机MAC"-->
        <!--/>-->
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="选择连接蓝牙开始工作"
            android:gravity="center_horizontal"

    />
    <ListView android:layout_width="fill_parent"
              android:id="@+id/lvDevices"
              android:layout_height="fill_parent">
    </ListView>
</LinearLayout>

