<?xml version="1.0" encoding="utf-8"?><LinearLayout         xmlns:android="http://schemas.android.com/apk/res/android"        android:orientation="vertical"        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:padding="10dip"        android:id="@+id/land_result_page">    <!--<Spinner-->        <!--android:layout_width="match_parent"-->        <!--android:layout_height="wrap_content"-->        <!--android:id="@+id/spn_bg"-->        <!--android:entries="@array/arr_spn_bg">-->    <!--</Spinner>-->    <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="horizontal"            android:layout_marginLeft="10dip"            android:layout_marginRight="10dip"            android:layout_weight="2"            >        <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:orientation="vertical">            <TableLayout                    android:layout_height="wrap_content"                    android:layout_width="wrap_content"            >                <!--<TableRow>-->                    <!--<TextView-->                    <!--android:id="@+id/result_label"-->                    <!--android:layout_width="wrap_content"-->                    <!--android:layout_height="wrap_content"-->                    <!--android:text="@string/txt_result"/>-->                <!--</TableRow>-->                <TableRow                        android:layout_marginBottom="10dip">                    <ImageView android:layout_width="80dp"                               android:layout_height="80dp"                               android:id="@+id/img_logo"                               android:src="@drawable/zjupin"                               android:layout_gravity="left"                    />                </TableRow>                <TableRow                        android:layout_marginBottom="10dip">                    <TextView                        android:id="@+id/cnt_label"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/txt_cnt"/>                    <EditText                            android:id="@+id/edt_cnt"                            android:layout_width="wrap_content"                            android:inputType="numberDecimal"                            android:hint="0.0"                            android:focusable="false"                            android:paddingBottom="1dip"                            style="@style/edtStyle"                            />                </TableRow>                <TableRow                        android:layout_marginBottom="10dip">                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/txt_loss"/>                    <EditText                            android:id="@+id/edt_loss"                            android:layout_width="wrap_content"                            android:inputType="numberDecimal"                            android:focusable="false"                            android:hint="0.00"                            android:paddingBottom="1dip"                            style="@style/edtStyle"/>                    <TextView                            android:layout_height="wrap_content"                            android:layout_width="wrap_content"                            android:text="@string/txt_dB"                            android:layout_weight="1"/>                </TableRow>                <!--不显示FSR-->                <!--<TableRow>-->                    <!--<TextView-->                        <!--android:layout_width="wrap_content"-->                        <!--android:layout_height="wrap_content"-->                        <!--android:text="@string/fst_text"/>-->                    <!--<EditText-->                            <!--android:id="@+id/edt_fst"-->                            <!--android:layout_width="wrap_content"-->                            <!--android:layout_height="wrap_content"-->                            <!--android:numeric="decimal"-->                            <!--android:editable="false"-->                            <!--android:text="0.0"/>-->                    <!--<TextView-->                            <!--android:layout_width="wrap_content"-->                            <!--android:layout_height="wrap_content"-->                            <!--android:text="@string/mhz_text"/>-->                <!--</TableRow>-->                <TableRow                    android:layout_marginBottom="10dip">                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/txt_dl"                        android:id="@+id/txt_dl"                    />                    <EditText                            android:id="@+id/edt_dl"                            android:layout_width="wrap_content"                            android:inputType="numberDecimal"                            android:focusable="false"                            android:hint="0.000000"                            android:layout_weight="2"                            android:paddingBottom="1dip"                            style="@style/edtStyle"/>                    <TextView                        android:layout_height="wrap_content"                        android:layout_width="wrap_content"                        android:text="@string/txt_metre"/>                </TableRow>                <TableRow                    android:layout_marginBottom="10dip"                    android:focusable="true"                    android:focusableInTouchMode="true"                >                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/txt_n"/>                    <EditText                            android:id="@+id/edt_n"                            android:layout_width="wrap_content"                            android:inputType="numberDecimal"                            android:hint="1.4400"                            android:paddingBottom="1dip"                            style="@style/edtStyle"/>                </TableRow>                <SeekBar                        android:layout_height="wrap_content"                        android:layout_width="wrap_content"                        android:indeterminate="false"                        android:id="@+id/skb_n"                        android:max="60"                        android:progress="0"                        android:layout_gravity="bottom"                        android:layout_weight="1"/>                <LinearLayout                    android:layout_width="wrap_content"                    android:layout_height="0dp"                    android:orientation="vertical"                    android:layout_weight="0.20"                    android:gravity="bottom"                    android:layout_marginTop="25dip">                    <TextView android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/txt_measure_range"                        style="@style/txtStyle"                    />                    <RadioGroup                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:id="@+id/rdiog_rangeSetter"                        android:orientation="vertical">                        <RadioButton                                android:layout_width="wrap_content"                                android:layout_height="wrap_content"                                android:text="@string/txt_rdio_long"                                android:layout_marginLeft="20dip"                                android:id="@+id/rdio_long"                                style="@style/rdioStyle"/>                        <RadioButton                                android:layout_width="wrap_content"                                android:layout_height="wrap_content"                                android:text="@string/txt_rdio_mid1"                                android:layout_marginLeft="20dip"                                android:id="@+id/rdio_mid1"                                style="@style/rdioStyle"/>                        <RadioButton                                android:layout_width="wrap_content"                                android:layout_height="wrap_content"                                android:text="@string/txt_rdio_mid2"                                android:layout_marginLeft="20dip"                                android:id="@+id/rdio_mid2"                                style="@style/rdioStyle"/>                        <RadioButton                                android:layout_width="wrap_content"                                android:layout_height="wrap_content"                                android:text="@string/txt_rdio_short"                                android:layout_marginLeft="20dip"                                android:id="@+id/rdio_short"                                style="@style/rdioStyle"/>                    </RadioGroup>                </LinearLayout>                <LinearLayout                    android:layout_marginTop="10dip"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:orientation="vertical"                    android:layout_gravity="left">                    <TextView                        android:id="@+id/txt_operator"                        android:text="@string/txt_operator"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"/>                    <TextView                        android:id="@+id/txt_date"                        android:text="@string/txt_measure_date"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"/>                </LinearLayout>            </TableLayout>        </LinearLayout>        <LinearLayout android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:orientation="vertical"                android:layout_marginLeft="20dip">                <TextView android:layout_width="fill_parent"                  android:layout_height="wrap_content"                  android:text="@string/txt_title_bbc"                  android:id="@+id/result_title"                  android:gravity="center"                  android:clickable="true"                  style="@style/btnStyle"                  android:textSize="32dp"                />                                <!--自定义画图区域-->                <RelativeLayout                        android:layout_width="match_parent"                        android:layout_height="550dip">                    <com.github.mikephil.charting.charts.LineChart                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:id="@+id/curve_drawer"                            android:longClickable="true"                            android:layout_gravity="center"                            android:visibility="visible"/>                    <ScrollView                            android:layout_width="match_parent"                            android:layout_height="match_parent"                            android:id="@+id/sv_logger"                            android:layout_gravity="center"                            android:fillViewport="true"                            android:visibility="invisible"                            android:background="#333333">                        <TextView                                android:layout_width="match_parent"                                android:layout_height="match_parent"                                android:id="@+id/tv_Log"                                android:gravity="left"                                android:text="Connecting..."                                android:clickable="true"                                android:visibility="invisible"                                android:textColor="#ececec"                        />                    </ScrollView>                </RelativeLayout>                <ProgressBar android:layout_width="match_parent"                     android:layout_height="match_parent"                     android:id="@+id/progressBar2"                     android:max="100"                     android:progress="0"                     style="@android:style/Widget.ProgressBar.Horizontal"                />                        </LinearLayout>    </LinearLayout>    <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="vertical"            android:gravity="center"            >        <LinearLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="horizontal">            <Button                android:layout_height="wrap_content"                android:layout_width="wrap_content"                android:text="@string/txt_btn_measure"                android:id="@+id/btn_measure"                android:layout_weight="1"                style="@style/btnStyle"/>            <Button android:layout_width="wrap_content"                 android:layout_height="wrap_content"                android:layout_weight="1"                android:text="@string/txt_btn_paramset"                android:id="@+id/btn_paramsetter"                style="@style/btnStyle"/>            <Button                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/txt_btn_save"                android:id="@+id/btn_savedata"                android:layout_weight="1"                style="@style/btnStyle"/>            <Button                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/txt_btn_read"                android:id="@+id/btn_readdata"                android:layout_weight="1"                style="@style/btnStyle"/>        </LinearLayout>    </LinearLayout></LinearLayout>